--- a/public/user.css
+++ b/public/user.css
@@ -21,6 +21,8 @@ header {
     position: -webkit-sticky;
     top: 0;
     z-index: 9999;
+    backdrop-filter: blur(10px);
+   background-color: rgb(0, 0, 0, 0.5);
 }
 
 header .navbar-expand a {
@@ -71,11 +73,14 @@ footer {
     background-color: white;
     color: White;
     background-color: black;
+    position:relative;
+    bottom:0;
+
 }
 
 footer .container {
     margin: auto;
-    width: 100rem;
+
 }
 
 footer .info b {
@@ -309,24 +314,24 @@ footer .col img {
 
 }
 
-.home {
+.offer {
     display: grid;
     position: relative;
     background-image: url('assets/wallpaper.jpg');
 
 }
 
-.home-section-one {
+.offer-section-one {
     display: grid;
     margin-top: 2rem;
 
 }
 
-.home-form {
+.offer-form {
     max-width: 100%;
 }
 
-.home-search {
+.offer-search {
     display: flex;
     justify-content: center;
     max-width: 50rem;
@@ -334,7 +339,7 @@ footer .col img {
 
 }
 
-.home-search input {
+.offer-search input {
     width: 50rem;
     height: 40px;
     border: 0;
@@ -342,7 +347,7 @@ footer .col img {
 }
 
 
-.home-search button {
+.offer-search button {
     background-color: gray;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
@@ -350,7 +355,7 @@ footer .col img {
     border: 0;
 }
 
-.home-category-new-product {
+.offer-category-new-product {
     max-width: 100%;
     text-align: center;
     height: 0px;
@@ -377,7 +382,7 @@ footer .col img {
     align-items: center;
     align-content: center;
     justify-content: center;
-   
+
 
 
 
@@ -409,7 +414,7 @@ footer .col img {
     font-size: 20px;
 }
 
-.home-section-two {
+.offer-section-two {
     display: grid;
 }
 
@@ -419,7 +424,7 @@ footer .col img {
 }
 
 
-.home-section-two {
+.offer-section-two {
     display: grid;
     justify-content: center;
 }
@@ -438,11 +443,12 @@ footer .col img {
     flex-wrap: wrap;
     max-width: 64%;
     gap: 20px;
-    margin:auto;
+    margin: auto;
     justify-content: center;
 
 
 }
+
 .new-items-content {
     display: grid;
 
@@ -454,14 +460,125 @@ footer .col img {
 .new-items-content {}
 
 .new-item-one {
-    padding:10px;
-    background-color: rgb(189, 187, 187,0.8);
+    padding: 10px;
+    background-color: rgb(189, 187, 187, 0.8);
     height: 15rem;
     border-radius: 15px;
     backdrop-filter: blur;
 }
-.new-item-one img{
+
+.new-item-one img {
     border-radius: 10px;
 }
 
 .item-name {}
+
+.home {
+    display: grid;
+    background-color: rgb(97, 96, 96);
+    text-transform: capitalize;
+
+
+}
+
+.home-section-one {
+    display: grid;
+
+}
+
+.home-content-one {
+    position: relative;
+    left: 20%;
+    margin-top: 3%;
+    color: white;
+}
+
+.home-content-one button {
+    background-color: yellowgreen;
+    border-radius: 5px;
+    border: 0;
+    padding: 10px;
+    width: 10%;
+    text-transform: capitalize;
+    color: White;
+    transition: all linear 0.3s;
+    position: relative;
+}
+
+.home-content-one button:hover {
+    color: green;
+    background-color: rgb(167, 228, 142);
+    width: 14rem;
+
+}
+
+.home-section-two {
+    background-color: white;
+    display: grid;
+    margin-top: 40px;
+    max-width: 100%;
+}
+
+.home-section-two-title {
+    text-align: center;
+    margin-top: 15px;
+}
+
+
+.home-content-two {
+    display: flex;
+    justify-content: center;
+    gap: 10rem;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+}
+
+.home-item {
+    display: grid;
+    text-align: center;
+    justify-content: center;
+}
+
+.home-item b {}
+
+.home-item p {
+    max-width: 11rem;
+    font-size: 20px;
+
+}
+
+.home-item img {
+    margin: auto;
+}
+
+.home-section-three {
+    display: grid;
+    padding-top: 30px;
+    background-color: rgb(226, 221, 221);
+    padding-top:40px;
+    padding-bottom:40px;
+}
+
+.home-content-three {
+    display: grid;
+    justify-content: center;
+}
+
+.home-content-three-title {
+    text-align: center;
+
+}
+
+.home-content-three-item {
+    display: flex;
+    gap: 100px;
+    justify-content: center;
+
+
+}
+
+.home-content-three-item img {
+    border-radius: 10px;
+
+
+}
