--- a/public/user.css
+++ b/public/user.css
@@ -285,12 +285,13 @@ footer .col img {
 }
 
 .purchase-price b {
-    position: absolute;
+    position: relative;
     z-index: 999;
     color: white;
-    left: 58.5rem;
+    left: 70.5rem;
     top: 28rem;
     font-size: 16px;
+    
 }
 
 .purchase-quantity input {
