--- a/public/user.css
+++ b/public/user.css
@@ -15,6 +15,9 @@ body {
 section {
     background-image: url('assets/wallpaper.jpg');
 }
+a{
+    text-decoration: none;
+}
 
 header {
     position: sticky;
@@ -291,7 +294,7 @@ footer .col img {
     left: 70.5rem;
     top: 28rem;
     font-size: 16px;
-    
+
 }
 
 .purchase-quantity input {
@@ -581,5 +584,43 @@ footer .col img {
 .home-content-three-item img {
     border-radius: 10px;
 
+}
+.section-about {
+    display: grid;
+    margin:auto;
+    background-image: url('assets/wallpaper.jpg');
+    height: 40rem;
+
+    /* backdrop-filter: blur(25px); */
+}
+.about-content {
+    display: grid;
+    background-color: rgba(255, 253, 253, 0.4);
+    max-width: 70%;
+    margin:auto;
+    color:White;
 
 }
+.about-one {
+    width: 50% ;
+    height: 159px;
+    text-align:center;
+}
+.about-one h1{
+    text-align:center;
+}
+
+.about-two {
+    margin-left:50%;
+    width: 50% ;
+    height: 159px;
+    text-align:center;
+}
+.about-three {
+    width: 50% ;
+    height: 159px;
+    text-align:center;
+}
+
+
+
